Fix: add markup for paddings, gap

--- a/blocks/contacts/__email/contacts__email.css
+++ b/blocks/contacts/__email/contacts__email.css
@@ -1,15 +1,15 @@
 .contacts__email {
   display: block;
-  padding: 32px 0 16px;
   text-align: center;
   font-size: 40px;
   line-height: 1.31;
+  padding-top: 16px;
   color: var(--color-turquoise-60);
 }
 
 @media screen and (max-width: 768px) {
   .contacts__email {
     font-size: 30px;
-    padding-top: 16px;
+    padding-top: 0;
   }
 }
